force-app/main/default/objects/Project_Task_Assignment__c/Project_Task_Assignment__c.object-meta.xml
<CustomObject>
    <description>Assign Tasks to a Project</description>
    <label>Project Task Assignment</label>
    <nameField>
        <displayFormat>PTTTA-{00000}</displayFormat>
        <label>Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Task Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>