force-app/main/default/objects/Project_Task_Assignment__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <description>Budget used when the project’s budget_by is task or task_fees.</description>
    <inlineHelpText>Budget used when the project’s budget_by is task or task_fees.</inlineHelpText>
    <label>Budget</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>