force-app/main/default/objects/Project_Task_Assignment__c/fields/Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Rate__c</fullName>
    <description>Rate used when the project’s bill_by is Tasks.</description>
    <inlineHelpText>Rate used when the project’s bill_by is Tasks.</inlineHelpText>
    <label>Hourly Rate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>