force-app/main/default/objects/Project_Task_Assignment__c/fields/ID_Harvest__c.field-meta.xml
<CustomField>
    <fullName>ID_Harvest__c</fullName>
    <description>Harvest external ID</description>
    <externalId>true</externalId>
    <label>ID (Harvest)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>