force-app/main/default/objects/Project_Task_Assignment__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether the task is active or archived</description>
    <inlineHelpText>Whether the task is active or archived</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>