force-app/main/default/objects/Project_Task_Assignment__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <description>The associated task</description>
    <inlineHelpText>The associated task</inlineHelpText>
    <label>Task</label>
    <referenceTo>Time_Tracker_Task__c</referenceTo>
    <relationshipLabel>Project Task Assignments</relationshipLabel>
    <relationshipName>Project_Task_Assignments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>