force-app/main/default/objects/Project_Task_Assignment__c/fields/Updated_At_Harvest__c.field-meta.xml
<CustomField>
    <fullName>Updated_At_Harvest__c</fullName>
    <description>Date and time the task assignment was last updated on the Harvest System</description>
    <inlineHelpText>Date and time the task assignment was last updated on the Harvest System</inlineHelpText>
    <label>Updated At (Harvest)</label>
    <type>DateTime</type>
</CustomField>